--- a/shop/templates/shop/catalog.html
+++ b/shop/templates/shop/catalog.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load staticfiles %}
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+<script src="{% static 'shop/js/popup.js' %}"></script>
 </head>
-<body>
-$END$
-</body>
-</html>
+
+{% for product in products %}
+    <div class="col-md-3 col-sm-6 tryvers">
+        <div class="tryvers_block card_flower" id="{{ product.id }}" onclick=SelectCard.call(this)>
+                <img class="flovers_foto" src="{{ product.photo.url }}">
+                <div class="flovers_discript">
+                    <p class="name_flower">{{ product.name }}</p>
+                    <p class="price">{{ product.price }} р/шт</p>
+
+                    <div class="info_and_basket">
+                        <a class="one_click" href=""> <p>Подробнее</p></a>
+                        <a class="basket_add" href=""> <img src="{% static 'shop/img/korzina.png' %}" ></a>
+                    </div>
+                </div>
+        </div>
+    </div>
+{% endfor %}
