--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -29,7 +29,7 @@
                   </div>
                  <div class="img_top"><a href="#"><img src="staticmenu/imagemenu/krest.png"></a></div>
             </div>
-            <div class="block"></div>
+            <div class="divide"></div>
             <div class="block_info_search">
                 <div class="search_block">
                     <img src="staticmenu/imagemenu/depositphotos_31813081-stock-photo-flowers.jpg">
